tests/ui/iterators/invalid-iterator-chain-with-int-infer.stderr
error[E0277]: a value of type `f32` cannot be made by summing an iterator over elements of type `{integer}`
  --> $DIR/invalid-iterator-chain-with-int-infer.rs:2:47
   |
LL |     let x = Some(()).iter().map(|()| 1).sum::<f32>();
   |                                         ---   ^^^ value of type `f32` cannot be made by summing a `std::iter::Iterator<Item={integer}>`
   |                                         |
   |                                         required by a bound introduced by this call
   |
   = help: the trait `Sum<{integer}>` is not implemented for `f32`
   = help: the following other types implement trait `Sum<A>`:
             `f32` implements `Sum<&f32>`
             `f32` implements `Sum`
note: the method call chain might not have had the expected associated types
  --> $DIR/invalid-iterator-chain-with-int-infer.rs:2:29
   |
LL |     let x = Some(()).iter().map(|()| 1).sum::<f32>();
   |             -------- ------ ^^^^^^^^^^^ `Iterator::Item` changed to `{integer}` here
   |             |        |
   |             |        `Iterator::Item` is `&()` here
   |             this expression has type `Option<()>`
note: required by a bound in `std::iter::Iterator::sum`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
